collapsable navbar fixed

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,5 +1,5 @@
 $body-bg:						#bdc3c7;
-$navbar-inverse-bg:	#ecf0f1;
-$navbar-inverse-link-color: #c0392b;
+$navbar-default-bg:	#ecf0f1;
+$navbar-default-link-color: #c0392b;
 $brand-primary: #c0392b;
 @import 'bootstrap';
